- Report list results can now be filtered by top rated in last 30d or most recent - Reports in list have truncated tex to fix ipad overlapping issues - User profile picture now visible in navbar when logged in.

--- a/static/css/aistyle.css
+++ b/static/css/aistyle.css
@@ -331,3 +331,10 @@ textarea.form-control:disabled {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
+/* Text Truncation for Single Line */
+.text-truncate-single {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
